# apache-airflow-providers-pulumi

./: .astro-registry.yaml  .gitignore  README.md  setup.cfg  setup.py
airflow_provider_pulumi/: __init__.py
airflow_provider_pulumi/example_dags/: example_pulumi_dag.py
airflow_provider_pulumi/hooks/: automation.py  pulumi_auto.py
airflow_provider_pulumi/operators/: base.py  destroy.py  preview.py  pulumi_auto.py  up.py
airflow_provider_pulumi/sensors/: pulumi_auto.py
pulumi_provider/: __init__.py
pulumi_provider/example_dags/: example_pulumi_dag.py
pulumi_provider/operators/: pulumi_auto.py
pulumi_provider/sensors/: pulumi_auto.py
tests/hooks/: test_pulumi_hook.py
tests/operators/: test_pulumi_operator.py
